+mustafa: design: fixing alignment and css

--- a/src/app/ledger/ledger.component.scss
+++ b/src/app/ledger/ledger.component.scss
@@ -83,6 +83,7 @@ table td[class*=col-]:last-child {
 .account_Name {
     color: rgba(0, 0, 0, 0.8);
     font-family: 'LatoWebBold';
+    text-transform: capitalize;
 }
 
 .ledger-footer-1 {
